# XVM

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .hgsub  .hgsubstate  .style.yapf  CODEOWNERS  Dockerfile  Jenkinsfile  README.MD  README.dev.md  README.md  build.json  build.ps1  build.py  build.sh  build_helpers.sh  build_xfw.sh  sonar.json  target_version
3rdparty_packages/: com.modxvm.xfw.crashfix_12.0.0.mtmod  com.modxvm.xfw.crashfix_12.0.0.wotmod  net.openwg.common_2.0.5.mtmod  net.openwg.common_2.0.5.wotmod
3rdparty_packages/net.openwg/: net.openwg.common_2.0.6.mtmod  net.openwg.common_2.0.6.wotmod  net.openwg.common_2.0.7.mtmod  net.openwg.common_2.0.7.wotmod  net.openwg.common_2.0.8.mtmod  net.openwg.common_2.0.8.wotmod  net.openwg.common_2.0.9.mtmod  net.openwg.common_2.0.9.wotmod  net.openwg.common_2.1.1.mtmod  net.openwg.common_2.1.1.wotmod  net.openwg.common_2.1.2.wotmod  net.openwg.fix.battleresultsreplays_1.0.5.wotmod
addons/: decompile-swf.sh  jpexs-decompiler.xvm.diff
addons/clanicons/: create-allclans-packages.sh  make-allclans-update.sh  make-topclans-update.sh  pngoptimizer.txt
addons/wn6&eff/: any_to_eff.js  any_to_wgr.js  any_to_wn.js  any_to_wn6.js  any_to_wn8.js  any_to_xeff.js  any_to_xwgr.js  any_to_xwn.js  any_to_xwn6.js  any_to_xwn8.js  readme-en.txt  readme-ru.txt
addons/xvm-audio/: readme.txt  xvm.bnk  xvm.fdp  xvm.fev  xvm.fsb
addons/xvm-teff/: parse-teff.py  xteff.csv  xteff.json
addons/xvm-xte/: parse-teff.py  xte.csv  xte.json
build_lib/: library.psm1  library.sh
build_lib/royale_toolchain/: xvm-config.xml
release/audioww/: xvm.bnk  xvm_wg.bnk
release/configs/: configs.url  sirmax-snippet-pp.xc  sirmax.xc  xvm.xc.sample
release/doc/: ChangeLog-en.md  ChangeLog-en.txt  ChangeLog-fr.txt  ChangeLog-ru.md  ChangeLog-ru.txt  audioww.txt  extra-field.txt  extra-field_ru.txt  keycodes.txt  macros-hangar.txt  macros-hangar_ru.txt  macros.txt  macros_ru.txt  py_macros_ru.txt  readme-cz.txt  readme-en.txt  readme-fr.txt  readme-pl.txt  readme-ru.txt
release/l10n/: en.xc  ru.xc
src/: package.json
src/installer/: README.md  build.sh
src/installer/src/dll/findwot/: CMakeLists.txt  build_msvs.cmd  ucm.cmake
src/installer/src/dll/findwot/src/: api.cpp  api.h  dll.cpp  filesystem.cpp  filesystem.h  findwot.cpp  findwot.h  findwot_test.cpp  registry.cpp  registry.h  string.cpp  string.h  vector.cpp  vector.h  wgc.cpp  wgc.h  wine.cpp  wine.h  wotclient.cpp  wotclient.h  wotdetector.cpp  wotdetector.h  wotlauncher.cpp  wotlauncher.h
src/installer/src/dll/findwot/src/rapidxml/: rapidxml.hpp
src/installer/src/dll/findwot/src_innosetup/: findwot.iss
src/python/: build.sh
src/swc_lesta/: base_app-1.0-SNAPSHOT.swc  battle.swc  common-1.0-SNAPSHOT.swc  common_i18n_library-1.0-SNAPSHOT.swc  gui_base-1.0-SNAPSHOT.swc  gui_battle-1.0-SNAPSHOT.swc  gui_lobby-1.0-SNAPSHOT.swc  lobby.swc  predictionIndicator.swc
src/swc_ui/: .build-wg_battle_classic_ui.sh  .build-wg_battle_comp7_ui.sh  .build-wg_battle_cosmic_ui.sh  .build-wg_battle_event_ui.sh  (+12 more)
src/xfw_packages/xfw_crashreport/native/: CMakeLists.txt
src/xfw_packages/xfw_crashreport/native/crashrpt/include/: CrashRpt.h
src/xfw_packages/xfw_crashreport/native/crashrpt/lang_files/: crashrpt_lang_RU.ini
src/xfw_packages/xfw_crashreport/native/crashrpt/lib/: CrashRpt1500.lib
src/xfw_packages/xfw_crashreport/native/src/: common.cpp  common.h  crashreporter.cpp  crashreporter.h  dllMain.cpp  dllMain.h  fix_suef.cpp  fix_suef.h  pythonModule.cpp
src/xfw_packages/xfw_filewatcher/native/: CMakeLists.txt
src/xfw_packages/xfw_filewatcher/native/src/: fileWatcher.cpp  fileWatcher.h  pythonModule.cpp  threadHelper.cpp  threadHelper.h
src/xfw_packages/xfw_fonts/native/: CMakeLists.txt
src/xfw_packages/xfw_fonts/native/src/: pythonModule.cpp  pythonModule.h  test.cpp  ttfInfo.cpp  ttfInfo.h  winapi_CreateFont.cpp  winapi_CreateFont.h  winapi_EnumFontsFamiliesEx.cpp  winapi_EnumFontsFamiliesEx.h
src/xfw_packages/xfw_mutex/native/: CMakeLists.txt
src/xfw_packages/xfw_mutex/native/src/: pythonModule.c
src/xfw_packages/xfw_ping/native/: CMakeLists.txt
src/xfw_packages/xfw_ping/native/src/: ping.c  ping.h  pythonModule.c
src/xfw_packages/xfw_powermanagement/native/: CMakeLists.txt
src/xfw_packages/xfw_powermanagement/native/src/: pythonModule.c
src/xfw_packages/xfw_wotfix_crashes/native/: 32_common.c  32_common.h  32_patch.c  32_patch_1.c  32_patch_2.c  32_patch_3.c  32_patch_4.c  64_common.c  64_common.h  64_patch.c  64_patch_1.asm  64_patch_1.c  64_patch_2.asm  64_patch_2.c  CMakeLists.txt  all_common.c  all_common.h  pythonModule.c
src/xfw_packages/xfw_wotfix_crashes/native/src/: bugfix_1.c  bugfix_1.h  bugfix_2.c  bugfix_2.h  bugfix_3.c  bugfix_3.h  bugfix_4.c  bugfix_4.h  common.c  common.h  pythonModule.c
src/xfw_packages/xfw_wotfix_hidpi/native/: CMakeLists.txt
src/xfw_packages/xfw_wotfix_hidpi/native/src/: pythonModule.c
src/xfw_packages/xfw_wwise/native/: CMakeLists.txt
src/xfw_packages/xfw_wwise/native/src/: path.cpp  path.h  pythonModule.cpp
src/xvm-native/: CMakeLists.txt  build.sh
src/xvm-native/include/python-2.7.7/: patchlevel.h  pyconfig.h  pythonnt_rc.h
src/xvm-native/release/xfw/native/: XVMNativeWOTFix.pyd  XVMNativeXPFix.pyd
src/xvm-native/src/common/: pythonWrapperHelper.c  pythonWrapperHelper.h
src/xvm-native/src/ping/: dllmain.c  ping.h  pythonModule.h  pythonWrapper.c  pythonWrapper.h
src/xvm-native/src/ping/common/: ping.c  ping.h
src/xvm-native/src/ping/dll/: dllmain.c  dllmain.h  pythonmodule.c  pythonmodule.h  pythonwrapper.c  pythonwrapper.h
src/xvm-native/src/ping/test/: main.c
src/xvm-native/src/xpfix/: dllmain.c  dllmain.h  findmodule.c  findmodule.h  injector.c  injector.h  pythonModule.c  pythonModule.h  pythonWrapper.c  pythonWrapper.h
src/xvm-native/src/xpfix/impl/: find_init_module.h  load_source_module.c  load_source_module.h
src_installer/: README.md  build.ps1  build.sh  xvm.iss  xvm_defines_template.iss
src_tool/: extract_flash.ps1
utils/: deploy.sh  test.sh
(+13212 files in other folders)
